benetech/ServiceNet#969: Fix jumping button on dismiss modal

--- a/src/main/webapp/app/modules/provider/provider-home.scss
+++ b/src/main/webapp/app/modules/provider/provider-home.scss
@@ -451,3 +451,14 @@
   outline: none;
   display: grid !important;
 }
+
+.submit-button-container {
+  .btn:not(.disabled):hover {
+    margin-top: 0 !important;
+    border-bottom-width: 4px !important;
+  }
+
+  &:hover {
+    padding-bottom: 0 !important;
+  }
+}
